# gnu_ww-tedit

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile  NEWS  README  SConscript  SConstruct  TODO
debian/: README.Debian  changelog  control  docs  menu.ex  rules
doc/: ww.1.txt  ww.txi
extra/: wkeys.map  ww
site_scons/site_tools/: crossmingw.py
src/: assertsc.c  block.c  block.h  block2.c  blockcmd.c  blockcmd.h  bookm.c  bookm.h  bookmcmd.c  bookmcmd.h  calccmd.c  calccmd.h  clips.c  clist.h  cmd.c  cmd.h  cmdc.h  contain.c  contain.h  ctxhelp.c  ctxhelp.h  debug.c  defs.c  defs.h  diag.c  diag.h  dirent.c  doctype.c  doctype.h  edinterf.c  edinterf.h  edit.c  edit.h  editcmd.c  editcmd.h  enterln.c  enterln.h  file.c  file.h  file2.c  (+115 more)
src/c_syntax/: c_syntax.c  c_syntax.h  c_syntax2.h  funcs.c  makefile  synh.c  synh.c.gen  synh.l
src/disp/: disp.h  disp_common.c  disp_ncurs.c  disp_ncurs_p.h  disp_win_g.c  ncurs_disp.c  p_ncurs.h  p_win_g.h  win_g_disp.c  win_g_p.h
src/fpcalc/: calc.h  calc.y  calc_tab.c  calc_tab.c.gen  calc_tab.h.gen  calcfunc.c  calcops.inc  calcops.phs  calcpriv.h  fpconf.h  lexfcalc.c  makefile  notes.txt  scan.l  w.ini
src/perl_re/: chartables.c  config.h
src/py_syntax/: py_synh.c  py_synh.l  py_syntax.c  py_syntax.h  py_syntax2.h
win_proj/: ww.dsp
